--- a/app/home/view-home.jade
+++ b/app/home/view-home.jade
@@ -1,5 +1,8 @@
-h1
-  span Hi! My Name is JC Gomez, but maybe you know me as 
-  a(href="https://twitter.com/bartsis") @bartsis
-  span  or maybe by 
-  a(href="https://github.com/brion25") @brion25
+div(layout="row" layout-sm="column" layout-align="space-around")
+  md-progress-circular(md-mode="indeterminate" ng-hide="home.profile")
+  div(flex="" ng-show="home.profile")
+    div(layout="row" layout-sm="column" layout-wrap="" layout-align="space-around").text-center
+      div(flex="grow")
+        img(src="{{home.profile.pictureUrls.values[0]}}")#profile-picture
+      h1(flex="grow" ng-bind="home.profile.formattedName")#profile-name.md-headline
+      h2(flex="grow" ng-bind="home.profile.headline")#profile-job.md-subhead
