--- a/app/app.scss
+++ b/app/app.scss
@@ -8,9 +8,15 @@
 #main-background{
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-size: 100%;
+  background-size: cover;
+  background-position: center;
 }
 
 #views{
   background-color:rgba(0,0,0,0.5);
+}
+
+.text{
+  text-shadow: 0px 0px 6px black;
+  color:white;
 }
