--- a/app/app.scss
+++ b/app/app.scss
@@ -5,7 +5,7 @@
   text-align: center;
 }
 
-#main-background{
+.main-background{
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -19,4 +19,15 @@
 .text{
   text-shadow: 0px 0px 6px black;
   color:white;
+}
+
+.header{
+  margin: 0.5em 0 0.5em;
+  font-weight: 300;
+}
+
+.content{
+  margin: 0.25em 0 0.25em;
+  font-size: 1em;
+  font-weight: 200;
 }
