--- a/app/home/style-home.scss
+++ b/app/home/style-home.scss
@@ -10,3 +10,29 @@
 #profile-job{
   margin-top: 0;
 }
+
+#github-contributions-img{
+  overflow:scroll;
+  background-color: rgba(0,0,0,0.5);
+}
+
+#github-contributions-header{
+  margin: 0;
+  font-size: 0.7em;
+  margin-bottom: 1em;
+  font-weight: 500;
+}
+
+.position-card{
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+#job-history{
+  .md-headline{
+    margin-right:5px;
+  }
+  .position-show-summary{
+    background-color: rgba(250,250,250,0.25);
+    color: white;
+  }
+}
