Common and Home sections have been created

--- a/app/animations.scss
+++ b/app/animations.scss
@@ -1,3 +1,8 @@
-@keyframes fully-landed{
-
+@keyframes show-cards{
+  from{
+    transform: rotateX(90deg);
+  }
+  to{
+    transform: rotateX(0deg);
+  }
 }
