--- a/app/app.scss
+++ b/app/app.scss
@@ -1,17 +1,7 @@
-/*
-VARIABLES
-*/
-$animationTiming : .5s;
-$profileImageLandingSize : 10.5em;
-
-/*
-COLOR_NAMES
-*/
-$blue : #27363B;
-$red : #EB4960;
-
+@import "app/common/styles/main";
 @import "app/animations";
 @import "app/loading/loading";
+@import "app/home/home";
 
 .center-text{
   text-align: center;
