--- a/app/common/styles/miscellaneous.scss
+++ b/app/common/styles/miscellaneous.scss
@@ -1,3 +1,16 @@
 .rounded{
   border-radius: 50%;
 }
+
+.center-text{
+  text-align: center;
+}
+
+.hide{
+  display: none;
+}
+
+.content{
+  display: flex;
+  justify-content: center;
+}
