--- a/app/app.scss
+++ b/app/app.scss
@@ -3,19 +3,13 @@
 @import "app/loading/loading";
 @import "app/home/home";
 
-.center-text{
-  text-align: center;
-}
-
-.hide{
-  display: none;
-}
-
-.content{
-  display: flex;
-  justify-content: center;
-}
-
 body{
   background-color: $blue;
+  font-family: sans-serif;
+  font-weight: lighter;
+}
+
+h1,h2,h3,h4,h5,h6{
+  margin : 0;
+  font-weight: bolder;
 }
