--- a/app/common/styles/animations.scss
+++ b/app/common/styles/animations.scss
@@ -1,4 +1,4 @@
-@keyframes flip-cards-1{
+@keyframes flip-cards{
   0%{
     transform: rotateX(90deg);
   }
@@ -13,14 +13,5 @@
   }
   100%{
     transform: rotateX(0deg);
-  }
-}
-
-@keyframes flip-cards-2{
-  from {
-    transform: translateY(2.5em) rotateX(-80deg);
-  }
-  to {
-    transform: translateY(0em) rotateX(0deg);
   }
 }
