--- a/app/common/styles/variables.scss
+++ b/app/common/styles/variables.scss
@@ -8,9 +8,12 @@ $profileImageLandingSize : 10.5em;
 COLOR_NAMES
 */
 $blue : #27363B;
+$darkBlue : #090c0d;
+$lightPurple:#976370;
 $red : #EB4960;
 $lightBlue : #456069;
 $orange : #FDCEAA;
+$lightOrange : #feebdc;
 $pink : #F4837D;
 $lightPink : #fac6c4;
 $strongPink : #f26d65;
