--- a/app/common/styles/variables.scss
+++ b/app/common/styles/variables.scss
@@ -14,6 +14,7 @@ $red : #EB4960;
 $lightBlue : #456069;
 $orange : #FDCEAA;
 $lightOrange : #feebdc;
+$strongOrange : #fa9443;
 $pink : #F4837D;
 $lightPink : #fac6c4;
 $strongPink : #f26d65;
