Adding github and position view

--- a/app/app.scss
+++ b/app/app.scss
@@ -2,6 +2,8 @@
 @import "app/loading/loading";
 @import "app/home/home";
 @import "app/resume/resume";
+@import "app/github/github";
+@import "app/position/position";
 
 html, body, #my-page{
   height:100%;
