--- a/app/common/styles/grid.scss
+++ b/app/common/styles/grid.scss
@@ -25,6 +25,9 @@
     &-left-content{
       justify-content: flex-start;
     }
+    &-hide{
+      display: none;
+    }
   }
 }
 
@@ -59,6 +62,6 @@
 }
 
 .full-width{
-  width: 100%;
+  width: 90%;
   max-width: 960px;
 }
