Adding view 'Myself' to show my CV info

--- a/app/app.scss
+++ b/app/app.scss
@@ -2,6 +2,7 @@
 @import "./../node_modules/sass-flex-mixin/flex";
 @import "./../node_modules/flexboxgrid-sass/flexboxgrid.scss";
 
+@import "./common/styles/animations";
 @import "./home/home";
 @import "./myself/myself";
 
