--- a/app/common/styles/_general.scss
+++ b/app/common/styles/_general.scss
@@ -14,3 +14,13 @@
   width: 100%;
   height: 100%;
 }
+
+.content{
+  padding:2.5em;
+}
+
+body{
+  font-family: Helvetica, Roboto, Andale Mono, monospace;
+  background-color: #222;
+  color : $gray;
+}
