--- a/app/common/styles/_general.scss
+++ b/app/common/styles/_general.scss
@@ -3,7 +3,12 @@
 }
 
 .blur-me{
-  filter : blur(15px);
+  @media(min-width: 640px){
+    filter : blur(15px);
+  }
+  @media(max-width: 640px){
+    filter : brightness(25%);
+  }
 }
 
 .full-size{
@@ -13,14 +18,26 @@
   left: 0;
   width: 100%;
   height: 100%;
+  max-height: 60em;
 }
 
 .content{
-  padding:2.5em;
+  height: 100%;
 }
 
 body{
   font-family: Helvetica, Roboto, Andale Mono, monospace;
   background-color: #222;
   color : $gray;
+  height:100%;
+  width:100%;
+}
+
+#my-page{
+  height:100%;
+  width:100%;
+  section{
+    height:100%;
+    width:100%;
+  }
 }
