--- a/app/twitter/_twitter.scss
+++ b/app/twitter/_twitter.scss
@@ -1,10 +1,17 @@
 .tweets{
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: flex-start;
-  max-height: 60em;
+  @media(min-width: 640px){
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-start;
+    height: 100%;
+  }
+  @media(max-width: 640px){
+    width:100%;
+    height:100%;
+    display: block;
+  }
   .tweet-wrapper{
     @media(max-width: 640px){
       max-width: calc(100% - 3px);
