--- a/app/app.scss
+++ b/app/app.scss
@@ -1,1 +1,6 @@
+@import "./common/styles/variables";
+@import "./common/styles/vendors";
+@import "./common/styles/general";
 
+//Contact Me
+@import "./contact-me/style";
