--- a/app/common/styles/_variables.scss
+++ b/app/common/styles/_variables.scss
@@ -1,5 +1,6 @@
 $backgroundColor : rgba(230, 243, 211, 0.5);
 $backgroundBorderColor : rgba(230, 243, 211, 1);
+$backgroundColor2 : rgba(193, 208, 170, 0.5);
 
 $defaultGreen :  rgba(144, 200, 63, 0.5);
 
