--- a/app/common/styles/_variables.scss
+++ b/app/common/styles/_variables.scss
@@ -4,7 +4,9 @@ $backgroundColor2 : rgba(193, 208, 170, 0.5);
 
 $defaultGreen :  rgba(144, 200, 63, 0.5);
 
+$fontColor : #354026;
+
 $twitterColor : #1da1f2;
 $linkedinColor : #1985bc;
 
-$animationType : cubic-bezier(.2,.81,1,.63);
+$animationType : 0.5s ease;
