--- a/app/contact-me/_style.scss
+++ b/app/contact-me/_style.scss
@@ -32,7 +32,7 @@
     align-items: center;
     justify-content: center;
     margin : 0.5em;
-    transition: transform 0.5s ease;
+    transition: transform $animationType;
     color: black;
 
     &-twitter{
