--- a/app/menu/_style.scss
+++ b/app/menu/_style.scss
@@ -4,17 +4,36 @@
   border-right:1px solid $backgroundColor2;
   height : 2.5em;
 
-  .search-icon{
-    font-size: 1.5em;
+  .search-mode{
+    @media only screen and (min-width: 62em){
+      left : calc(50% + 1.5em);
+    }
+    width : calc(50% - 3em);
     margin-right: 0.5em;
-  }
+    height : 1.62em;
+    font-size: 1.5em;
+    text-align: left;
+    position: absolute;
+    top:0;
+    left : 2.5em;
+    display: flex;
+    align-items: center;
+    color:gray;
+    background-color: white;
+    transition: all $animationType;
 
-  .search-input{
-    width : calc(100% - 4em);
-    margin-right: 0.5em;
-    height : calc(100% - 2px);
-    border:none;
-    font-size: 1.5em;
+    &.active{
+      left : 0;
+      top : 0;
+      width: 100%;
+      height: 100%;
+    }
+
+    .search-icon{
+      font-size: 1em;
+      margin-right: 0.5em;
+      color:gray;
+    }
   }
 
   .actions-wrapper{
@@ -22,7 +41,7 @@
     padding: 0 0.25em;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
   }
 
   .icon{
