Search basic functionallity has been applied

--- a/app/menu/_style.scss
+++ b/app/menu/_style.scss
@@ -20,13 +20,74 @@
     align-items: center;
     color:gray;
     background-color: white;
+    padding:0;
     transition: all $animationType;
+    flex-direction:column;
+    justify-content:center;
+
+    &-actions{
+      display: flex;
+      width : 100%;
+    }
+
+    &-content{
+      display: none;
+    }
+
+    &-search-text{
+      flex:1;
+      display: flex;
+
+      div{
+        flex: 1;
+      }
+
+      input{
+        font-size: 1em;
+        border: none;
+        border-bottom: 1px solid;
+        width: 100%;
+        display: none;
+      }
+    }
+
+    &-close{
+      opacity: 0;
+    }
 
     &.active{
       left : 0;
       top : 0;
-      width: 100%;
-      height: 100%;
+      width: calc(100% - 2em);
+      height: calc(100% - 1em);
+      padding: 0 1em;
+      padding-top: 1em;
+      font-size: 2.5em;
+      align-items: flex-start;
+      justify-content: flex-start;
+
+      .search-mode-content{
+        display: initial;
+      }
+
+      .search-mode-search-text{
+        span{
+          display: none;
+        }
+        input{
+          display: initial;
+        }
+      }
+
+      .search-mode-close{
+        opacity: 1;
+        cursor: pointer;
+        transition: transform $animationType;
+
+        &:hover{
+          transform: rotate(360deg);
+        }
+      }
     }
 
     .search-icon{
