Refactor to the navheader has been done

--- a/app/common/styles/_variables.scss
+++ b/app/common/styles/_variables.scss
@@ -1,8 +1,10 @@
 $backgroundColor : rgba(230, 243, 211, 0.5);
+$backgroundColorNoOpacity : #edf6de;
 $backgroundBorderColor : rgba(230, 243, 211, 1);
 $backgroundColor2 : rgba(193, 208, 170, 0.5);
 
 $defaultGreen :  rgba(144, 200, 63, 0.5);
+$defaultLightGreen : rgb(248, 255, 240);
 
 $fontColor : #354026;
 
@@ -10,3 +12,5 @@ $twitterColor : #1da1f2;
 $linkedinColor : #1985bc;
 
 $animationType : 0.5s ease;
+
+$menuHeight : 400px;
