--- a/app/navbar/_navbar-actions.scss
+++ b/app/navbar/_navbar-actions.scss
@@ -1,4 +1,4 @@
-.menu{
+.navbar-actions{
   background: $backgroundColor;
   border-bottom:1px solid $backgroundColor2;
   border-right:1px solid $backgroundColor2;
@@ -55,6 +55,10 @@
       opacity: 0;
     }
 
+    &.menu-open{
+      top:$menuHeight + 1px;
+    }
+
     &.active{
       left : 0;
       top : 0;
@@ -65,6 +69,7 @@
       font-size: 2.5em;
       align-items: flex-start;
       justify-content: flex-start;
+      background: $defaultLightGreen;
 
       .search-mode-content{
         display: initial;
@@ -76,6 +81,7 @@
         }
         input{
           display: initial;
+          background: $defaultLightGreen;
         }
       }
 
@@ -105,7 +111,32 @@
     justify-content: flex-end;
   }
 
-  .icon{
-    font-size: 2em;
+  .menu-options{
+    position: relative;
+    width: 2em;
+    height: 2em;
+
+    .menu-icon{
+      &-open, &-close{
+        font-size: 2em;
+        cursor: pointer;
+        position: absolute;
+        top:0;
+        left:0;
+        transition: all $animationType;
+        opacity: 0;
+        z-index: 1;
+
+        &.active{
+          transform: rotate(360deg);
+          opacity: 1;
+          z-index: 5;
+        }
+      }
+
+      &-close{
+        left:2px;
+      }
+    }
   }
 }
