--- a/app/profile/_style.scss
+++ b/app/profile/_style.scss
@@ -3,4 +3,24 @@
     text-align: center;
     font-style: italic;
   }
+
+  .my-skills{
+    &-xs{
+      display: block;
+      @media only screen and (min-width: 62em){
+        display: none;
+      }
+
+      canvas{
+        height:28em !important;
+      }
+    }
+
+    &-md{
+      display: none;
+      @media only screen and (min-width: 62em){
+        display: block;
+      }
+    }
+  }
 }
