Adding option to the Menu

--- a/app/common/styles/_variables.scss
+++ b/app/common/styles/_variables.scss
@@ -14,3 +14,7 @@ $linkedinColor : #1985bc;
 $animationType : 0.5s ease;
 
 $menuHeight : 400px;
+$menuOptionHeight : $menuHeight/3;
+$menuOptionColor : #075379;
+$menuColor : #76cbff;
+$menuTooltipColor : #021620;
