--- a/app/app.scss
+++ b/app/app.scss
@@ -1,6 +1,7 @@
 @import "./common/styles/variables";
 @import "./common/styles/vendors";
 @import "./common/styles/general";
+@import "./common/styles/page-transition";
 
 //Contact Me
 @import "./contact-me/style";
