Adding view to display the top 10 posts

--- a/app/common/styles/_general.scss
+++ b/app/common/styles/_general.scss
@@ -1,3 +1,33 @@
+html, body, #my-page{
+  height:100%;
+  width:100%;
+}
+
+#my-page > section{
+  height: 100%;
+  width:100%;
+  .app{
+    height:100%;
+    width:calc(100% - 3em);
+
+    & > .row{
+      height: calc(100% - 3em);
+      width:100%;
+      margin:none;
+
+      & > div{
+        height: 100%;
+        width:100%;
+
+        & > div{
+          height : 100%;
+          width:100%;
+        }
+      }
+    }
+  }
+}
+
 body{
   background-color: $backgroundColor;
   margin:0;
@@ -8,6 +38,7 @@ body{
 
 .content{
   position: relative;
+  overflow: hidden;
 
   @media only screen and (min-width: 62em){
     padding:0;
