--- a/app/common/styles/_page-transition.scss
+++ b/app/common/styles/_page-transition.scss
@@ -2,6 +2,8 @@
   &-enter, &-leave{
     transition: all $animationType;
     background-color: $backgroundColorNoOpacity;
+    width: 100%;
+    height : 100%;
   }
 
   &-enter{
