--- a/app/navbar/_navbar-actions.scss
+++ b/app/navbar/_navbar-actions.scss
@@ -24,6 +24,7 @@
     transition: all $animationType;
     flex-direction:column;
     justify-content:center;
+    z-index: 9999;
 
     &-actions{
       display: flex;
