--- a/app/blogger/_style.scss
+++ b/app/blogger/_style.scss
@@ -67,13 +67,21 @@
     }
 
     &-date{
-      font-size: 0.75em;
+      font-size: 1em;
       font-style: italic;
+
+      @media only screen and (min-width: 62em){
+        font-size: 0.75em;
+      }
     }
 
-    &-summary{
+    &-summary, &-posts-count{
       text-align: center;
-      font-size: 0.9em;
+      font-size: 1.15em;
+
+      @media only screen and (min-width: 62em){
+        font-size: 0.9em;
+      }
     }
   }
 
