--- a/app/common/styles/_general.scss
+++ b/app/common/styles/_general.scss
@@ -41,6 +41,10 @@ body{
   overflow: hidden;
   padding: 0;
 
+  div{
+    overflow: auto;
+  }
+
   @media only screen and (min-width: 62em){
     padding:0;
   }
