--- a/app/profile/_style.scss
+++ b/app/profile/_style.scss
@@ -1,4 +1,6 @@
 .profile{
+  padding: 0 1em;
+
   .avatar{
     &-wrapper{
       text-align: center;
@@ -30,30 +32,114 @@
   }
 
   .heading-big{
-    margin-top: 0;
+    margin-top: 0.5em;
   }
 
   &-summary{
     text-align: center;
     font-style: italic;
+    padding: 1em 0em;
+    @media only screen and (min-width: 62em){
+      padding: 1em 5em;
+    }
+    border-top: 1px solid $backgroundColor2;
+    border-bottom: 1px solid $backgroundColor2;
+  }
+
+  .my-qualifications{
+    display: flex;
+    padding: 0 1em;
+    flex-direction: column;
+
+    @media only screen and (min-width: 62em){
+      flex-direction: row;
+    }
+    .my-previous-jobs{
+      width:100%;
+      order:2;
+
+      @media only screen and (min-width: 62em){
+        width:30%;
+        order: 1;
+      }
+
+      &-header{
+        font-size: 2em;
+        font-weight: lighter;
+        margin-top: 0;
+
+        @media only screen and (min-width: 62em){
+          font-size: 1.5em;
+        }
+      }
+
+      &-job{
+        list-style-type: none;
+
+        &:not(:last-child){
+          margin-bottom: 14px;
+
+          @media only screen and (min-width: 62em){
+            margin-bottom: 1em;
+          }
+        }
+
+        h3{
+          margin: 0;
+          font-size: 14px;
+
+          @media only screen and (min-width: 62em){
+            font-size: 1em;
+          }
+          small{
+            font-weight: lighter;
+            font-style: normal;
+            font-size: 0.95em;
+          }
+        }
+
+        small{
+          font-size: 10px;
+          font-style: italic;
+
+          @media only screen and (min-width: 62em){
+            font-size: 0.75em;
+          }
+        }
+      }
+
+      ul{
+        padding: 0;
+      }
+    }
   }
 
   .my-skills{
     &-xs{
       display: block;
+      align-items: center;
+      justify-content: center;
+      min-height: 28em;
+      order: 1;
       @media only screen and (min-width: 62em){
         display: none;
       }
 
       canvas{
+        width: inherit !important;
         height:28em !important;
       }
     }
 
     &-md{
       display: none;
+      order:2;
       @media only screen and (min-width: 62em){
-        display: block;
+        display: flex;
+        width: 70%;
+        align-items: center;
+        justify-content: center;
+        min-height: 30em;
       }
     }
   }
