--- a/app/navbar/_menu.scss
+++ b/app/navbar/_menu.scss
@@ -84,6 +84,6 @@
 
   &.active{
     height : $menuHeight;
-    border-bottom:1px solid $backgroundColor2;
+    border-bottom:1px solid $colorFourth;
   }
 }
