--- a/app/blogger/_style.scss
+++ b/app/blogger/_style.scss
@@ -4,8 +4,10 @@
   &-description{
     display: flex;
     flex-direction: column;
-    border-right: 2px solid $backgroundColor2;
+    border-right: 2px solid $colorFourth;
     padding: 0;
+    justify-content: center;
+    align-items: center;
     a{
       text-decoration: none;
     }
@@ -13,7 +15,6 @@
 
   &-author{
     flex-direction: column;
-    border-top: 2px solid $backgroundColor2;
     padding: 1em;
     display: none;
     @media only screen and (min-width: 62em){
@@ -52,11 +53,9 @@
     justify-content: center;
     display: flex;
     flex-direction: column;
-    height: 100%;
     padding:1em;
     @media only screen and (min-width: 62em){
       display: flex;
-      height: 50%;
     }
 
     &-header{
@@ -121,7 +120,7 @@
         overflow: hidden;
         display: flex;
         align-items: center;
-        background: $defaultGreen;
+        background: $colorFifth;
         border-top-left-radius: $postBorderRadius;
         border-top-right-radius: $postBorderRadius;
         img{
@@ -132,8 +131,8 @@
       &-info{
         display: flex;
         flex-direction: row;
-        background-color: $backgroundColorStrongNoOpacity;
-        border: 1px solid $defaultGreen;
+        background-color: $colorThird;
+        border: 1px solid $colorFifth;
         border-top: none;
         padding: 0.5em;
         border-bottom-left-radius: $postBorderRadius;
@@ -170,7 +169,7 @@
             font-size: 2em;
             padding: 0.2em;
             border-radius: 50%;
-            background-color: $defaultGreen;
+            background-color: $colorFifth;
             width: 1em;
             height: 1em;
             text-align: center;
