--- a/app/common/styles/_general.scss
+++ b/app/common/styles/_general.scss
@@ -29,7 +29,7 @@ html, body, #my-page{
 }
 
 body{
-  background-color: $backgroundColor;
+  background-color: $colorFirst;
   margin:0;
   font-family: sans-serif;
   font-weight: lighter;
