--- a/app/common/styles/_variables.scss
+++ b/app/common/styles/_variables.scss
@@ -1,13 +1,13 @@
-$backgroundColor : rgba(230, 243, 211, 0.5);
-$backgroundColorNoOpacity : #f2f9e9;
-$backgroundColorStrongNoOpacity : rgb(236, 246, 222);
+$colorFirst : #00131A;
+$colorSecond : $colorFirst;
+$colorThird : #004058;
+$colorFifth :  #62D4FF;
 $backgroundBorderColor : rgba(230, 243, 211, 1);
-$backgroundColor2 : rgba(193, 208, 170, 0.5);
+$colorFourth : #464A4C;
 
-$defaultGreen :  rgba(144, 200, 63, 0.5);
-$defaultLightGreen : rgb(248, 255, 240);
+$colorSixth : white;
 
-$fontColor : #354026;
+$fontColor : #EDEDED;
 
 $twitterColor : #1da1f2;
 $linkedinColor : #1985bc;
