--- a/app/navbar/_navbar-actions.scss
+++ b/app/navbar/_navbar-actions.scss
@@ -1,7 +1,7 @@
 .navbar-actions{
-  background: $backgroundColor;
-  border-bottom:1px solid $backgroundColor2;
-  border-right:1px solid $backgroundColor2;
+  background: $colorThird;
+  border-bottom:1px solid $colorFourth;
+  border-right:1px solid $colorFourth;
   height : 2.5em;
 
   .search-mode{
@@ -18,7 +18,7 @@
     left : 2.5em;
     display: flex;
     align-items: center;
-    color:gray;
+    color:$colorFirst;
     background-color: white;
     padding:0;
     transition: all $animationType;
@@ -81,7 +81,7 @@
         }
         input{
           display: initial;
-          background: $defaultLightGreen;
+          background: $colorSixth;
         }
       }
 
@@ -103,7 +103,7 @@
     .search-icon{
       font-size: 1em;
       margin-right: 0.5em;
-      color:gray;
+      color:$colorFirst;
     }
   }
 
