--- a/app/profile/_style.scss
+++ b/app/profile/_style.scss
@@ -42,8 +42,8 @@
     @media only screen and (min-width: 62em){
       padding: 1em 5em;
     }
-    border-top: 1px solid $colorFourth;
-    border-bottom: 1px solid $colorFourth;
+    border-top: 1px solid $abbey;
+    border-bottom: 1px solid $abbey;
   }
 
   .my-qualifications{
