--- a/app/common/styles/_general.scss
+++ b/app/common/styles/_general.scss
@@ -82,3 +82,10 @@ div[class^="col"]{
 .app{
   margin-left: 3em;
 }
+
+.page-name{
+  font-weight: lighter;
+  font-size: 1.5em;
+  margin: 0.5em 0;
+  text-align: center;
+}
