--- a/app/portfolio/_style.scss
+++ b/app/portfolio/_style.scss
@@ -1,11 +1,9 @@
 .portfolio{
-  height: 100%;
   &-items{
     display: flex;
-    flex-direction: column;
-    height:calc(100% - 5em);
+    flex-direction: row;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     flex-wrap: wrap;
   }
   &-item{
@@ -32,15 +30,21 @@
     }
 
     &-img{
-      height:5em;
+      height:10em;
       overflow: hidden !important;
       display: flex;
       justify-content: center;
       align-items: center;
       margin-bottom: 1.5em;
+      @media only screen and (min-width: 62em){
+        height:5em;
+        img{
+          height: 5em;
+        }
+      }
 
       img{
-        height:5em;
+        height:10em;
         transition: all $animationType;
       }
     }
@@ -50,12 +54,25 @@
       flex-direction: row;
       justify-content: center;
       align-items: center;
+      span{
+        font-size: 1.5em;
+        width: calc(100% - 1em);
+        @media only screen and (min-width: 62em){
+          font-size: 1em;
+        }
+      }
     }
 
     &-type{
-      margin-right: 0.25em;
-      font-size: 1em;
-      width: 1.5em;
+      margin-right: 0.5em;
+      font-size: 1.5em;
+      width: 2em;
+      text-align: center;
+      @media only screen and (min-width: 62em){
+        margin-right: 0.25em;
+        font-size: 1em;
+        width: 1.5em;
+      }
     }
 
     a{
