Integration with links

--- a/src/features/home/components/_info.scss
+++ b/src/features/home/components/_info.scss
@@ -1,33 +1,98 @@
-.contact-info {
-  font-size: 1.35em;
-  margin: 0.25em 0;
-  padding: 0.2em 0;
-  position: relative;
+@media (max-width: 640px) {
+  .info {
+    img {
+      width: 7.5em;
+    }
 
-  &:before {
-    content: ' ';
-    position: absolute;
-    background: black;
-    width: 0;
-    height: 1px;
-    bottom: 0;
-    left: 50%;
-    transition: all 0.3s ease-in-out;
+    .title,.sub-title {
+      text-align: center;
+    }
+
+    .title {
+      font-size: 1.5em;
+    }
+
+    .sub-title {
+      font-size: 1.25em;
+    }
+
+    .contact-info {
+      font-size: 1em !important;
+    }
+  }
+}
+
+.info {
+  z-index: 100;
+
+  * {
+    z-index: 100;
   }
 
-  &:hover {
+  .title,.sub-title {
+    margin: 0;
+  }
+
+  .title {
+    margin-top: 0.5em;
+    margin-bottom: 0.25em;
+  }
+
+  .sub-title {
+    margin-bottom: 0.5em;
+    a {
+      margin-left: 0.3em;
+    }
+  }
+
+  .contact-info {
+    font-size: 1.35em;
+    margin: 0.25em 0;
+    padding: 0.2em 0;
+    position: relative;
+    cursor: pointer;
+    color: black;
+    text-decoration: none;
+
     &:before {
-      width: 125%;
-      left: -12.5%;
+      content: ' ';
+      position: absolute;
+      background: black;
+      width: 0;
+      height: 1px;
+      bottom: 0;
+      left: 50%;
+      transition: all 0.3s ease-in-out;
+    }
+
+    &:hover {
+      &:before {
+        width: 125%;
+        left: -12.5%;
+      }
+
+      i {
+        transform: rotate(360deg);
+      }
     }
 
     i {
-      transform: rotate(360deg);
+      transition: all 0.3s ease-in-out;
+      margin-right: 0.35em;
     }
-  }
 
-  i {
-    transition: all 0.3s ease-in-out;
-    margin-right: 0.35em;
+    $colorList: twitter linkedin medium codepen rss github;
+
+    @each $color in $colorList {
+      &.#{$color} {
+        i {
+          color: calculate-color($color)
+        }
+
+        &:before {
+          background-color: calculate-color($color);
+        }
+      }
+    }
   }
 }
