--- a/src/features/home/components/home.scss
+++ b/src/features/home/components/home.scss
@@ -1,3 +1,5 @@
+@import "../../../common/scss/variables";
+@import "../../../common/scss/functions";
 @import "../../../common/scss/helpers";
 @import "./info";
 
@@ -7,20 +9,4 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-
-  .title,.sub-title {
-    margin: 0;
-  }
-
-  .title {
-    margin-top: 0.5em;
-    margin-bottom: 0.25em;
-  }
-
-  .sub-title {
-    margin-bottom: 0.5em;
-    a {
-      margin-left: 0.3em;
-    }
-  }
 }
