--- a/src/common/scss/manifest.scss
+++ b/src/common/scss/manifest.scss
@@ -11,3 +11,11 @@ html, body, #root {
 body {
   background-color: white;
 }
+
+#particles-js {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
